Bug 514127. Draw the canvas background color on the whole canvas area instead of just the viewport when RenderDocument is called with ignore scrolling flag. r=roc